--- a/client/package.json
+++ b/client/package.json
@@ -23,9 +23,11 @@
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.5.0",
+    "moment": "^2.29.4",
     "radio-buttons-react-native": "^1.0.4",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-calendar-picker": "^7.1.4",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-image-picker": "^5.6.1",
     "react-native-modal": "^13.0.1",
