--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "react-native": "0.72.4",
     "react-native-calendar-picker": "^7.1.4",
     "react-native-gesture-handler": "^2.12.1",
+    "react-native-get-random-values": "^1.9.0",
     "react-native-image-picker": "^5.6.1",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "^2.17.0",
@@ -47,6 +48,7 @@
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/uuid": "^9.0.3",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
