--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.5.0",
+    "deprecated-react-native-prop-types": "^4.2.1",
     "moment": "^2.29.4",
     "radio-buttons-react-native": "^1.0.4",
     "react": "18.2.0",
@@ -32,6 +33,7 @@
     "react-native-get-random-values": "^1.9.0",
     "react-native-image-picker": "^5.6.1",
     "react-native-modal": "^13.0.1",
+    "react-native-razorpay": "^2.3.0",
     "react-native-reanimated": "^2.17.0",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
