--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-community/blur": "^4.3.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^18.3.1",
@@ -32,6 +33,7 @@
     "react-native-gesture-handler": "^2.12.1",
     "react-native-get-random-values": "^1.9.0",
     "react-native-image-picker": "^5.6.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal": "^13.0.1",
     "react-native-razorpay": "^2.3.0",
     "react-native-reanimated": "^2.17.0",
