--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.5.0",
     "deprecated-react-native-prop-types": "^4.2.1",
+    "lottie-react-native": "^6.4.1",
     "moment": "^2.29.4",
     "radio-buttons-react-native": "^1.0.4",
     "react": "18.2.0",
