--- a/client/android/app/build.gradle
+++ b/client/android/app/build.gradle
@@ -88,6 +88,14 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+        release {
+            if (project.hasProperty('MYAPP_RELEASE_STORE_FILE')) {
+                storeFile file('ibapp.keystore')
+                storePassword 'ibapp123'
+                keyAlias 'ibapp'
+                keyPassword 'ibapp123'
+            }
+        }
     }
     buildTypes {
         debug {
@@ -96,6 +104,7 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
+            signingConfig signingConfigs.release
             signingConfig signingConfigs.debug
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
